<resources>
    <string name="app_name">Stay Healthy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="step">step</string>
    <string name="exercise">Exercise</string>
    <string name="steps">Steps</string>
    <string name="fullbody">Full Body</string>
    <string name="legbody">Leg Body</string>
    <string name="upperbody">Upper Body</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="km">KM</string>
    <string name="burned">Burned</string>
</resources>
